make some enhancements

--- a/kitchen-system/src/app/layouts/footer/footer.component.html
+++ b/kitchen-system/src/app/layouts/footer/footer.component.html
@@ -1,4 +1,5 @@
 <main class="container-fluid footer bg-black">
+
     <section class=" main-container">
 
 
@@ -6,16 +7,17 @@
 
             <h3 class="my-4  pb-2">About The Restaurant</h3>
             
-            <section class="my-4">
-            <p class="text-light">One of the most popular on the Restaurants.</p>
+            <div class="my-4">
+
+              <p class="text-light">One of the most popular on the Restaurants.</p>
           
-                <p>
-                    <i class="fa-solid fa-location-dot p-1"></i> 
-                    Egypt, Mansoura
+              <p>
+                 <i class="fa-solid fa-location-dot p-1"></i> 
+                 Egypt, Mansoura
                     
-                </p>
+              </p>
     
-                <p>
+               <p>
                     <i class="fa-solid fa-phone p-1"></i>
                     +01 321 654 824
                 </p>
@@ -24,43 +26,50 @@
                     <i class="fa-solid fa-envelope p-1"></i>
                     Restau  &#64; Restau.com
                 </p>
-            </section>
+
+            </div>
          
     
         </section>
 
         
+
         <section class="  col-md-3 col-0 custom-border text-light p-5">
+
             <h3 class="my-4   pb-2"> Quick Links</h3>
            
-            <section class="my-4  pb-2">
+            <div class="my-4  pb-2">
             <a  href="#" class="">About Us</a>
             <a href="#" class="my-2">order Now!</a>
             <a href="#" class="my-2">Food</a>
             <a href="#" class="my-2">Cold Drinks</a>
-            </section>
+            </div>
             
         </section>
 
         
+
         <section class="custom-border  col-md-3 col-0 text-light p-5">
+
             <h3 class="my-4 pb-2">Support</h3>
            
-            <section class=" my-4">
+            <div class=" my-4">
                 <a href="#">My Account</a>
                 <a href="#" class="my-2">Checkout</a>
                 <a href="#" class="my-2 ">Privacy</a>
                 <a href="#" class="my-2">Help & Support</a>
+            </div>
 
-            </section>
         </section>
+
 
 
       
         <section class="custom-border  col-md-3 col-0 text-light p-5">
+
             <h3 class="my-4 pb-2">Newsletter</h3>
           
-            <section class="my-4">
+            <div class="my-4">
                 <p>To get the latest news and latest updates from us.</p>
                 <form>
                     <div class="form-group">
@@ -69,7 +78,8 @@
                     </div>
                     <button type="submit" class="my-1 w-100 custom-btn custom-radius">Subscribe</button>
                   </form>
-            </section>
+            </div>
+            
         </section>
 
 
