--- a/kitchen-system/src/app/layouts/footer/footer.component.css
+++ b/kitchen-system/src/app/layouts/footer/footer.component.css
@@ -1,5 +1,3 @@
-
-/* Define the keyframes for the animation */
 @keyframes moveDown {
     0% {
       top: -20%;
@@ -8,43 +6,47 @@
       top: 100%;
     }
   }
+
+
 .main-container{
     display: flex;
     justify-content:space-evenly;
     overflow: hidden; 
 }
 
+
+
 .custom-border >section{
     width: 100%;
-    }
+ }
     
 
   .main-container h3 {
-    border-bottom: 2px solid rgba(47, 46, 46, 0.536);
-position: relative;
+  border-bottom: 2px solid rgba(47, 46, 46, 0.536);
+  position: relative;
 
   }
 
  
-  .main-container h3::after {
-    content: '';
-    border-bottom: 2px solid rgba(47, 46, 46, 0.536);
-position: absolute;
-background-color: orangered;
-bottom: 0;
-left: 0;
-width: 15%;
+.main-container h3::after {
+  content: '';
+  border-bottom: 2px solid rgba(47, 46, 46, 0.536);
+  position: absolute;
+  background-color: orangered;
+  bottom: 0;
+  left: 0;
+  width: 15%;
   }
 
-  
-  
-  /* Apply the styles to the custom border */
+   
+ 
   .custom-border {
     border-right: 1px solid rgb(26, 25, 25);
     position: relative;
-    overflow: hidden; /* Ensure the pseudo-element stays within the border area */
+    overflow: hidden; 
   }
   
+
   .custom-border::after {
     content: '';
     position: absolute;
@@ -53,14 +55,16 @@ width: 15%;
     width: 1px;
     height: 23%;
     opacity: 0;
-    background: linear-gradient(to bottom , rgba(159, 157, 157, 0.263),white ); /* Gradient border */
+    background: linear-gradient(to bottom , rgba(159, 157, 157, 0.263),white );
 
   }
   
+
   .main-container section:nth-child(1)::after{
     animation: moveDown 3s linear infinite ;
     opacity: 1;
   }
+
 
   .main-container section:nth-child(2)::after{
     animation: moveDown 3s linear infinite 2s;
@@ -77,6 +81,7 @@ width: 15%;
    font-size: larger;
   }
 
+
   .main-container section:nth-child(2) a:hover,
   .main-container section:nth-child(3) a:hover,
   .main-container p:hover {
@@ -92,7 +97,6 @@ width: 15%;
     opacity: 1;
   }
 
- 
 
 
   .main-container section:nth-child(3) a{
@@ -110,26 +114,25 @@ width: 15%;
    
   }
 
-
  
 
- 
   @media(max-width:1000px) and (min-width:768px){
-    .main-container{
-      
-       flex-wrap: wrap;
-    
+    .main-container{ 
+       flex-wrap: wrap; 
   }
+
   .main-container section{
     width: calc(100%/2);
     
   }
+
 }
 
 
-  @media(max-width:768px){
-    .main-container{
-      
-        flex-direction: column;
-    }
+ @media(max-width:768px){
+  
+ .main-container{
+     flex-direction: column;
+  }
+
   }
