--- a/kitchen-system/src/app/layouts/loader/loader.component.css
+++ b/kitchen-system/src/app/layouts/loader/loader.component.css
@@ -31,17 +31,17 @@
     background-color: rgba(255, 255, 255, 0.541);
   }
   
-  /* Custom Spinner */
+
   .spinner {
-    border: 4px solid rgba(255, 255, 255, 0.541); /* Light background */
-    border-top: 4px solid #FF6B16; /* Spinner color */
+    border: 4px solid rgba(255, 255, 255, 0.541);
+    border-top: 4px solid #FF6B16; 
     border-radius: 50%;
     width: 100px;
     height: 100px;
     animation: spin 1s linear infinite;
   }
   
-  /* Spinner Animation */
+
   @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
