show orders to user

--- a/kitchen-system/src/app/layouts/top-nav/top-nav.component.html
+++ b/kitchen-system/src/app/layouts/top-nav/top-nav.component.html
@@ -41,6 +41,17 @@
       </ul>
 
     </div>
-    
+
+
+    <div class="justify-content-end">
+      <a class="nav-link mx-3" (click)="toggleSidebar()">
+        <fa-icon [icon]="faCartShopping"></fa-icon>
+      </a>
+    </div>
+  
   </nav>
   
+
+  <app-show-order *ngIf="isSidebarVisible"></app-show-order>
+
+ 
