--- a/kitchen-system/src/app/show-order/show-order.component.html
+++ b/kitchen-system/src/app/show-order/show-order.component.html
@@ -1,4 +1,9 @@
-<main class="sidebar">
+<main *ngIf="isSidebarVisible" class="sidebar">
+
+    <div class=" d-flex justify-content-end">
+        <fa-icon (click)="toggleSidebar()" [icon]="faClose"></fa-icon>
+    </div>
+
 
     <h3 class=" my-3">Your Orders</h3>
 
