--- a/kitchen-system/src/app/layouts/top-nav/top-nav.component.html
+++ b/kitchen-system/src/app/layouts/top-nav/top-nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg  sticky  p-3 custom-cursor ">
+<nav class="navbar navbar-expand-lg  p-3 custom-cursor ">
 
     <button 
      class="navbar-toggler" 
