--- a/kitchen-system/src/app/layouts/top-nav/top-nav.component.html
+++ b/kitchen-system/src/app/layouts/top-nav/top-nav.component.html
@@ -45,7 +45,7 @@
 
     <div class="justify-content-end">
       <a class="nav-link mx-3" (click)="toggleSidebar()">
-        <fa-icon [icon]="faCartShopping"></fa-icon>
+        <fa-icon class="h4" [icon]="faCartShopping"></fa-icon>
       </a>
     </div>
   
