--- a/kitchen-system/src/app/show-order/show-order.component.html
+++ b/kitchen-system/src/app/show-order/show-order.component.html
@@ -1,7 +1,7 @@
 <main *ngIf="isSidebarVisible" class="sidebar">
 
     <div class=" d-flex justify-content-end">
-        <fa-icon (click)="toggleSidebar()" [icon]="faClose"></fa-icon>
+        <fa-icon class="h4" (click)="toggleSidebar()" [icon]="faClose"></fa-icon>
     </div>
 
 
