--- a/kitchen-system/src/app/app.component.html
+++ b/kitchen-system/src/app/app.component.html
@@ -1,4 +1,4 @@
-<main class="main-content">
+<main [ngClass]="{'main-content': addClass}" class="main-content">
     <router-outlet></router-outlet>
 </main>
 
